Fix misalignment

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -99,6 +99,13 @@
     grid-template-columns: repeat(2, 1fr);
 
     grid-column-gap: 30px;
+
+    .left-container,
+    .right-container {
+        h4 {
+            margin-top: 0;
+        }
+    }
 }
 
 @media #{$mobile}, #{$tablet-portrait} {
@@ -116,6 +123,12 @@
 
     .updates {
         grid-template-columns: repeat(1, 1fr);
+
+        .right-container {
+            h4 {
+                margin-top: 20px !important;
+            }
+        }
     }
 }
 
@@ -130,11 +143,5 @@
         .email-tile {
             grid-column: 4 / 4;
         }
-    }
-}
-
-.left-container {
-    h4 {
-        margin-top: 0;
     }
 }
